feat(fakeprovider): basic server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,12 @@
     "cSpell.words": [
         "abstractmetalprovider",
         "fakeprovider",
+        "httprouter",
         "metalprovider",
         "metalproviders",
         "metalprovidersmanager"
+    ],
+    "conventionalCommits.scopes": [
+        "metalproversmanager"
     ]
 }
