feat(deployable): basic deployable package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,14 @@
     "cSpell.words": [
         "abstractmetalprovider",
         "fakeprovider",
+        "godotenv",
         "httprouter",
         "metalprovider",
         "metalproviders",
         "metalprovidersmanager"
     ],
     "conventionalCommits.scopes": [
-        "metalproversmanager"
+        "metalproversmanager",
+        "fakeprovider"
     ]
 }
