feat(deployable): Deplouable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "abstractmetalprovider",
+        "Actionables",
         "contextable",
+        "Controllables",
         "fakeprovider",
         "godotenv",
         "httprouter",
