feat(fakeprovider): basic fakeprovider api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "metalprovider",
         "metalproviders",
         "metalprovidersmanager",
-        "projectable"
+        "projectable",
+        "unscesfull"
     ],
     "conventionalCommits.scopes": [
         "metalproversmanager",
