--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "metalproviders",
         "metalprovidersmanager",
         "projectable",
+        "runspace",
         "unscesfull"
     ],
     "conventionalCommits.scopes": [
