chore(boilerblate): rename "internal" to "deployables"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Actionables",
         "contextable",
         "Controllables",
+        "deployables",
         "erbl",
         "errorable",
         "fakeprovider",
