--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}/cmd/fakeprovider/fakeprovider.go"
+    },
+    {
+      "name": "clusteror",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/cmd/clusteror/clusteror.go"
     }
   ]
 }
