feat(clusteror): Create machine on fake provider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "abstractmetalprovider",
         "Actionables",
         "clusteror",
+        "consts",
         "contextable",
         "Controllables",
         "deployables",
