feat(clusteror): basick cluster module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,9 @@
         "projectable",
         "runspace",
         "serverutils",
-        "unscesfull"
+        "tmpl",
+        "unscesfull",
+        "userdata"
     ],
     "conventionalCommits.scopes": [
         "metalproversmanager",
